syntax = "proto3";

package greet;

option go_package = "github.com/velicankurt/gRPC_in_Go/greet/proto";

message GreetRequest {
  string first_name = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  rpc Greet(GreetRequest) returns (GreetResponse) {}; // unary
  rpc GreetManyTimes(GreetRequest) returns (stream GreetResponse) {}; // server streaming
}